--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,41 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+:root {
+  --main-color: #1abc9c;
+  --dark-color: #2c3e50;
+}
+
+a {
+  color: white !important;
+}
+
+.dark-line {
+  color: var(--dark-color) !important;
+  background-color: var(--dark-color) !important;
+}
+
+.title-dark {
+  color: var(--dark-color) !important;
+}
+
+.activePage {
+  width: fit-content;
+
+  background-color: var(--main-color) !important;
+}
+
+.nav-link {
+  width: fit-content;
 }
